--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: ./install
+        with:
+          version: v1.2.0
+
       - id: install
         uses: ./install
 
